testsuite/keen.dg/uncomplete.c

/* { dg-do compile } */

int main(  } /* { dg-error "" } */


